# geant-web-application

./: .gitignore  CMakeLists.txt  README.md  compile_application.sh  cors.xml  deploy-s3.sh  geant4.cpp  geant4.hpp  policy.json  prepare.sh  publish.sh  publish_repo.sh  setup_env.sh
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  GDML_ActionInitialization.hh  GDML_DetectorConstruction.hh  GDML_PhysicsList.hh  GDML_PrimaryGenerator.hh  GDML_RunAction.hh  PhysicsList.hh  PrimaryGenerator.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
scripts/: setup_env.js
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  GDML_ActionInitialization.cc  GDML_PhysicsList.cc  GDML_PrimaryGenerator.cc  GDML_RunAction.cc  PhysicsList.cc  PrimaryGenerator.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
utils/: lazy_json_generator.py
